# zivijo-mattermost-webhook

./: .env.example  .gitignore  Dockerfile  README.md  birthdays.example.csv  docker-compose.yml  requirements.qa.txt  requirements.txt  setup.cfg  setup.py
src/zivijo/: __main__.py  __version__.py  env.py  webhook.py
tests/: test___version__.py  test__empty__.py  test_env.py  test_webhook_post_message.py  test_webhook_read_and_parse_csv.py  test_zivijo.py  test_zivijo_post_message.py
