[bdist_wheel]
universal=1

[metadata]
license_files = LICENSE

[tool:pytest]
minversion = 3.0
pythonpath = src/zivijo/
testpaths = tests
filterwarnings =
    error::ResourceWarning

[pytest]
env =
    ZIVIJO_WEBHOOK_URL=https://set_in_setup_cfg.com/hooks/some_weird_hash
    ZIVIJO_BIRTHDAYS_CSV_PATH=./birthdays.example.csv

[coverage:run]
omit=
    src/zivijo/__init__.py

[flake8]
ignore=
    ; Missing type annotation for self in method1
    ANN101,
    ; Missing type annotation for *arg
    ANN002,
    ; Missing type annotation for **kwargs
    ANN003,
    ; Missing type annotation for cls in classmethod
    ANN102,
    ; Dynamically typed expressions (typing.Any) are disallowed
    ANN401,
    ; Change outer quotes to avoid escaping inner quotes
    Q003
max-line-length = 120
max_complexity = 30
inline-quotes = double
multiline-quotes = '''
docstring-quotes = """
enable-extensions = G
# flake8-import-order
import-order-style = pycharm
application_import_names = zivijo, tests

[bandit]
exclude = .idea, .pytest_cache, venv
; B101: assert_used
skips = B101

[mypy]
python_version=3.12
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True
disallow_subclassing_any = False
warn_return_any = False
disallow_untyped_decorators = False
warn_incomplete_stub = False
ignore_missing_imports = True
show_error_context = True
cache_fine_grained = True
show_column_numbers = True
disallow_any_expr = False
disallow_any_unimported = False
disallow_any_decorated = False
disallow_any_generics = False
follow_imports = skip

[mypy-tests.*]
; no need to check argument type since many tests are testing invalid input
; no need to check assigning a method errors since many tests are mocking whole functions
disable_error_code = arg-type, method-assign
